--- a/DAY 6/index.html
+++ b/DAY 6/index.html
@@ -37,7 +37,7 @@
         <h3>What is the highest salary for a spacex engineer?</h3>
         <span>
             <button class="upvote">+upvote</button>
-            <button class="answer">answer</button>
+            <button>answer</button>
         </span>
         <hr />
 
@@ -48,7 +48,7 @@
         <h3>What is the syllabus for JEE 2024?</h3>
         <span>
             <button class="upvote">+upvote</button>
-            <button class="answer">answer</button>
+            <button>answer</button>
         </span>
         <hr />
 
@@ -59,7 +59,7 @@
         <h3>Why is the sky blue?</h3>
         <span>
             <button class="upvote">+upvote</button>
-            <button class="answer">answer</button>
+            <button>answer</button>
         </span>
         <hr />
 
@@ -70,7 +70,7 @@
             <h3>Why is the sky blue?</h3>
             <span>
                 <button class="upvote">+upvote</button>
-                <button class="answer">answer</button>
+                <button>answer</button>
             </span>
             <hr />
     </main>
