--- a/DAY 6/PracticeQs.html
+++ b/DAY 6/PracticeQs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="PracticeQs.css">
     <title>Practice Qs</title>
   </head>
   <body>
@@ -12,7 +13,7 @@
     <button class="userbtn">Register</button>
     <hr />
     <label for="search">Search</label>
-    <input placeholder="search your friends" id="search" />
+    <input type="text" placeholder="search your friends" id="search" />
     <button id="searchbtn">Search</button>
   </body>
 </html>
