--- a/DAY 6/inheritance_demo.html
+++ b/DAY 6/inheritance_demo.html
@@ -8,15 +8,14 @@
     <link rel="stylesheet" href="inheritance_style.css" />
   </head>
   <body>
-    <body>
       <h1>Main Heading</h1>
       <div>
         <h2>Heading 1</h2>
         <form>
-          <label>username: </label>
-          <input type="text" placeholder="username" />
-          <label>password: </label>
-          <input type="password" placeholder="password" />
+          <label for="username">username: </label>
+          <input type="text" placeholder="username" id="username" />
+          <label for="password">password: </label>
+          <input type="password" placeholder="password" id="password"/>
           <button>Login</button>
         </form>
         <hr />
@@ -32,6 +31,17 @@
         </p>
         <hr />
       </div>
-    </body>
+      <!-- <div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          <ul>
+            Lorem ipsum dolor sit.
+            <li>a</li>
+            <li>b</li>
+            <li>c</li>
+            <li>d</li>
+          </ul>
+        </p>
+      </div> -->
   </body>
 </html>
