--- a/DAY 7/demo.html
+++ b/DAY 7/demo.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <h1>Heading 1</h1>
-   <div>
+   <div> </div>
+    <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, illum labore? Eaque praesentium sed sapiente ad fugiat voluptatem amet illo minus, ex nihil maiores possimus tenetur tempore consequuntur quibusdam odio ipsam temporibus? Unde similique quia blanditiis placeat amet dolores hic molestiae dolor maiores dolorem? Exercitationem id delectus voluptatum ipsam! Quas, labore neque? Amet  deserunt quia voluptatem, cupiditate omnis, facilis nobis blanditiis provident dolore cum sapiente vero? Nesciunt, expedita unde repellat est dolorem necessitatibus adipisci, Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, illum labore? Eaque praesentium sed sapiente ad fugiat voluptatem amet illo minus, ex nihil maiores possimus tenetur tempore consequuntur quibusdam odio ipsam temporibus? Unde similique quia blanditiis placeat amet dolores hic molestiae dolor maiores dolorem? Exercitationem <span>INLINE</span>id  Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, illum labore? Eaque praesentium sed sapiente ad fugiat voluptatem amet illo minus, ex nihil maiores possimus tenetur tempore consequuntur quibusdam odio ipsam temporibus? Unde similique quia blanditiis placeat amet dolores hic molestiae dolor maiores dolorem? Exercitationem id  Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, illum labore? Eaque praesentium sed sapiente ad fugiat voluptatem amet illo minus, ex nihil maiores possimus tenetur tempore consequuntur quibusdam odio ipsam temporibus? Unde similique quia blanditiis placeat amet dolores hic molestiae dolor maiores dolorem? Exercitationem id  voluptatum recusandae deleniti doloremque dolore Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime doloremque pariatur sed maiores. Enim nostrum cumque porro aspernatur, voluptates officia accusamus atque quis numquam itaque veritatis eligendi quam at illum excepturi error impedit eius ducimus modi qui perferendis repellat voluptas! Ad hic, illo excepturi modi officiis eius corporis eligendi inventore.obcaecati.
-   </div>
+    </p>
+  
     
 </body>
 </html>
