--- a/Assignment 6/Qs2.html
+++ b/Assignment 6/Qs2.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="Qs2.css">
 </head>
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
 </body>
 </html>
