--- a/DAY 8/Card_Effect.html
+++ b/DAY 8/Card_Effect.html
@@ -11,7 +11,7 @@
         <img src="../IMG/men.jpg" alt="men image">
         <div class="desc">
             <h3>Shivam Kumar</h3>
-            <p>Data Analyst</p>
+            <p>Machine Learning</p>
         </div>
     </div>
     <div class="card">
