--- a/DAY 8/index.html
+++ b/DAY 8/index.html
@@ -14,5 +14,7 @@
             <li><a href="https://myaccount.google.com/">Account</a></li>
         </ul>
     </header>
+
+    <img src="https://images.unsplash.com/photo-1537432376769-00f5c2f4c8d2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1925&q=80" height="200px" width="400px">
 </body>
 </html>
