--- a/DAY 9/index.html
+++ b/DAY 9/index.html
@@ -11,10 +11,12 @@
     <div id="continer">
         <div style="background-color:#9400d3">violet</div>
         <div style="background-color:#4b0082">indigo</div>
-        <div style="background-color:#0000ff">blue</div>
+        <!-- <div style="background-color:#0000ff; height: 75px;">blue</div> -->
+        <div style="background-color:#0000ff;">blue</div>
         <div style="background-color:#00ff00">green</div>
         <div style="background-color:#ffff00">yellow</div>
-        <div style="background-color:#ff7f00">orange</div>
+        <!-- <div style="background-color:#ff7f00; height: 200px; font-size: 3.5rem;">orange</div> -->
+        <div style="background-color:#ff7f00;">orange</div>
         <div style="background-color:#ff0000">red</div>
     </div>
      
