--- a/DAY 9/button.html
+++ b/DAY 9/button.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         html {
-            background-color: white;
+            background-color: black;
         }
 
         button {
