--- a/DAY 11/index.html
+++ b/DAY 11/index.html
@@ -6,10 +6,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
-    <h1>Apan KIIT</h1>
+    <h1>Apan KIIT</h1> <br>
+    <span class="material-symbols-outlined">settings</span>
+    <span class="material-symbols-outlined">cancel</span>
+    <span class="material-symbols-outlined">home</span>
+    <i class="fa-solid fa-cart-shopping"></i>
 </body>
 </html>
