--- a/DAY 11/index.html
+++ b/DAY 11/index.html
@@ -17,5 +17,19 @@
     <span class="material-symbols-outlined">cancel</span>
     <span class="material-symbols-outlined">home</span>
     <i class="fa-solid fa-cart-shopping"></i>
+    <hr>
+    <div class="menu">
+        <ul>
+            <li>
+                <i class="fa-brands fa-facebook"></i>
+                <a href="">Galary</a>
+            </li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </div>
 </body>
 </html>
