--- a/MINI_PROJECT/index.html
+++ b/MINI_PROJECT/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="btn_two">
-          <label for="check" style="color: grey">
+          <label for="check" style="color: black">
             <i class="fa-solid fa-xmark"></i>
           </label>
         </div>
@@ -71,9 +71,9 @@
 
         <div class="social_media">
           <ul>
-            <a href="#"><i class="fa-brands fa-facebook"></i></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-youtube"></i></a>
           </ul>
         </div>
