--- a/MINI_PROJECT/index.html
+++ b/MINI_PROJECT/index.html
@@ -15,12 +15,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="main_box">
       <input type="checkbox" id="check" />
       <div class="btn_one">
-        <label for="check" style="color: white">
+        <label for="check">
           <i class="fa-solid fa-bars"></i>
         </label>
       </div>
@@ -31,7 +32,7 @@
         </div>
 
         <div class="btn_two">
-          <label for="check" style="color: black">
+          <label for="check">
             <i class="fa-solid fa-xmark"></i>
           </label>
         </div>
@@ -71,9 +72,9 @@
 
         <div class="social_media">
           <ul>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
             <a href="#"><i class="fa-brands fa-youtube"></i></a>
           </ul>
         </div>
