--- a/DAY 12(Bootstrap)/index.html
+++ b/DAY 12(Bootstrap)/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Bootstrap</title>
 </head>
 <body>
-    
+ 
+    <button>Click me!</button>
+    <button class="btn btn-success">click me</button>
+    <button class="btn btn-primary">Get started</button>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"></script>  
 </body>
 </html>
