--- a/DAY 12(Bootstrap)/Button(layout).html
+++ b/DAY 12(Bootstrap)/Button(layout).html
@@ -11,15 +11,16 @@
     <div class="container">
     <button class="btn">btn one</button>
     <button class="btn btn-primary">btn two</button>
-    <button class="btn btn-secondary">btn three</button>
+    <button class="btn btn-secondary  ">btn three</button>
     <button class="btn btn-success">btn four</button>
     <button class="btn btn-danger">btn five</button>
     <button class="btn btn-warning">btn six</button>
     <button class="btn btn-info">btn seven</button>
-    <button class="btn btn-light">btn eight</button>
-    <button class="btn btn-outlinr btn-dark">Click me</button>
+    <button class="btn btn-outline-light btn-lg">btn eight</button>
+    <button class="btn btn-outline-dark btn-sm" disabled>Click me</button>
     
-
+<a class="
+btn btn-primary" href="https://www.google.com" target="_blank">Google Me</a>
 
 
 </div>
