--- a/DAY 12(Bootstrap)/comp(Badges).html
+++ b/DAY 12(Bootstrap)/comp(Badges).html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="comp(Badges).css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <title>Badges in Bootstrap</title>
 </head>
 <body>
@@ -31,8 +35,17 @@
     Request
     <span class="badge rounded rounded-pill bg-dark">100+</span>
 </button>
+<br> <br>
+<a href="" class="text-dark">
+    <i class="fas fa-envelope fa-2x"></i>
+        <span class="badge bg-danger badge-notification rounded-pill top-0 start-100 position-absolute">99+</span></a>
+<a href="" class="text-dark">
+
 
 </div>
-
+<a href="" class="text-dark mx-3">
+    <i class="fas fa-envelope fa-2x"></i>
+    <span class="badge bg-danger badge-dot"></span>
+</a> 
 </body>
 </html>
