--- a/DAY 12(Bootstrap)/comp(Alert).html
+++ b/DAY 12(Bootstrap)/comp(Alert).html
@@ -8,10 +8,19 @@
     <title>Alert in Bootstrap</title>
 </head>
 <body>
-    <div class="alert alert-primary" role="alert">Tis is simple Alert!</div>
+    <!-- <div class="alert alert-primary" role="alert">Tis is simple Alert!</div>
     <div class="alert alert-secondary">Tis is simple Alert!</div>
     <div class="alert alert-success">Tis is simple Alert!</div>
     <div class="alert alert-danger" role="alert">Tis is simple Alert!</div>
 
+    <button class="btn btn-primary"> Button
+        <div class="alert alert-success"></div>
+    </button>
+        <div class="alert alert-primary" role="alert">This is alert <a href="#" class="alert-link">example</a> click on it</div> -->
+
+    <div class="alert alert-danger">Download failed! please try again!</div>
+    <div class="alert alert-success">Congratulations! Your score 50/50</div>
+   
+    <div class="alert alert-danger">A simple dark alert with <a href="#" class="alert-link">an example link</a>.Give it</div>
 </body>
 </html>
