--- a/DAY 12(Bootstrap)/comp(Alert).html
+++ b/DAY 12(Bootstrap)/comp(Alert).html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="comp(Badges).css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <title>Alert in Bootstrap</title>
 </head>
 <body>
@@ -19,8 +23,21 @@
         <div class="alert alert-primary" role="alert">This is alert <a href="#" class="alert-link">example</a> click on it</div> -->
 
     <div class="alert alert-danger">Download failed! please try again!</div>
-    <div class="alert alert-success">Congratulations! Your score 50/50</div>
    
     <div class="alert alert-danger">A simple dark alert with <a href="#" class="alert-link">an example link</a>.Give it</div>
+
+    <div class="alert alert-warning d-flex"><i class="fa-solid fa-triangle-exclamation" style="color: #ff0000;"></i>
+        This is Alert Warning
+    </div>
+<hr>
+    <div class="alert alert-success alert-dismissible">Congratulations! Your score 50/50
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    </div>
+ <hr>
+    <button type="button" class="btn btn-primary btn-sm">
+        <span class="glyphicon glyphicon-refresh"></span> Refresh
+      </button>
+      
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
