Update Button Group

--- a/DAY 12(Bootstrap)/Button_Grup(component).html
+++ b/DAY 12(Bootstrap)/Button_Grup(component).html
@@ -14,7 +14,7 @@
         <button type="button" class="btn btn-success">two</button>
         <button type="button" class="btn btn-success">three</button>  
         
-        <div class="btn-group">
+        <div class=" btn btn-group">
             <button type="button" class="btn btn-success">one</button>
             <button type="button" class="btn btn-success">two</button>
             <button type="button" class="btn btn-success">three</button>  
@@ -26,6 +26,37 @@
             <button class="btn btn-outline-primary">three</button>
             <button class="btn btn-outline-primary">four</button>
         </div>
-    </div>
+
+        <!-- Anchor tags button -->
+
+        <div class="btn-group-lg">
+            <a href="#" class="btn btn-primary active" aria-current="page">Active Link</a>
+            <a href="" class="btn btn-outline-primary">Link</a>
+            <a href="#" class="btn btn-dark">Link</a>
+        </div>
+
+        <!-- Checked Box -->
+
+        <div class="btn-group">
+
+            <input type="checkbox" name="check1" class="btn-check" id="check1">
+            <label for="check1" class="btn btn-outline-primary">CheckBox1</label>
+            <input type="checkbox" name="check1" class="btn-check" id="check2">
+            <label for="check2" class="btn btn-outline-primary">CheckBox2</label>
+            <input type="checkbox" name="check1" class="btn-check" id="check3">
+            <label for="check3" class="btn btn-outline-primary">CheckBox3</label>
+        </div>
+
+        <!-- Radio Button -->
+
+        <div class="btn-group">
+            <input type="radio" class="btn-check" name="radio" id="radio1" autocomplete="off">
+            <label for="radio1" class="btn btn-outline-danger">Danger Button</label>
+
+            <input type="radio" class="btn-check" name="radio" id="radio2" autocomplete="off">
+            <label for="radio2" class="btn btn-outline-success" >Successfull Button</label>
+        </div>
+        
+        </div>
 </body>
 </html>
