--- a/DAY 12(Bootstrap)/Button_Grup(component).html
+++ b/DAY 12(Bootstrap)/Button_Grup(component).html
@@ -56,7 +56,8 @@
             <input type="radio" class="btn-check" name="radio" id="radio2" autocomplete="off">
             <label for="radio2" class="btn btn-outline-success" >Successfull Button</label>
         </div>
-        
+        <input type="radio" class="btn-check" name="radio" id="radio2" autocomplete="off">
+        <label for="radio2" class="btn btn-outline-success" >Successfull Button</label>
         </div>
 </body>
 </html>
