--- a/DAY 12(Bootstrap)/Navbar.html
+++ b/DAY 12(Bootstrap)/Navbar.html
@@ -7,18 +7,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="Navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <title>Navation bar</title>
+    <title>Navation Bar</title>
+    <link rel="website icon" 
+    type="png"  href="../IMG/bootstrap.png">
 </head>
 
 <body>
 
-    <nav class="navbar bg-body-tertiary  navbar-expand-lg fixed-top">
+    <nav class="navbar bg-body-tertiary fixed-top navbar-expand-lg">
         <div class="container-fluid">
             <a href="#" class="navbar-brand">Brand Name</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"  data-bs-target="#navbarNavAltMarkup">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup
+             " aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              </button>
+
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a href="#" class="nav-link">Home</a>
                     <a href="#" class="nav-link">About Us</a>
@@ -26,10 +30,14 @@
                     <a href="#" class="nav-link">Pricing</a>
                 </div>
             </div>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style="margin-top: 50px;">
         <h2>Bootstrap Button Group</h2>
         <button type="button" class="btn btn-success">one</button>
         <button type="button" class="btn btn-success">two</button>
@@ -93,9 +101,9 @@
         quasi distinctio quaerat, iure tempora odio earum repudiandae mollitia. Ipsum labore blanditiis exercitationem,
         voluptas, sint veniam s </p>
 
-
     </div>
-    <a href="#" class="btn btn-dark">Link</a>
+     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
