--- a/SPOTIFY/index.html
+++ b/SPOTIFY/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../SPOTIFY/IMG/logo.png">
     <title>Spotify - Web Player: Music for everyone</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Poppins&display=swap"
+        rel="stylesheet">
 
 </head>
+
 <body>
-       <div class="main">
+    <div class="main">
         <div class="sidebar">
             <div class="nav">
                 <div class="nav-option" style="opacity: 1;">
@@ -40,11 +46,41 @@
                         <i class="fa-solid fa-arrow-right-long"></i>
                     </div>
                 </div>
-                <div class="boxes"></div>
+                <!--  -->
+                <div class="lib-box">
+                    <div class="box">
+                        <p class="box-p1">Create your first playlist</p>
+                        <p class="box-p2">It's easy, we'll help you</p>
+                        <button class="badge">
+                            Create playlist
+                        </button>
+                    </div>
+
+                    <div class="box">
+                        <p class="box-p1">Let's find some podcasts to follow</p>
+                        <p class="box-p2">We'll keep you updated on new episodes</p>
+                        <button class="badge">
+                            Browse podcasts
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="main-content">main content </div>
+        <div class="main-content">
+            <div class="sticky-nav">
+
+                <img src="../SPOTIFY/IMG/backward_icon.png" alt="">
+                <img src="../SPOTIFY/IMG/forward_icon.png" alt="">
+                <button class="badge">Explore Premium</button>
+                <button class="badge"><i class="fa-regular fa-circle-down"></i> Install App</button>
+                <i class="fa-regular fa-user"></i>
+
+
+            </div>
+            <div class="cards"></div>
+        </div>
         <div class="music-player">music player</div>
-       </div>
+    </div>
 </body>
+
 </html>
