--- a/SPOTIFY/index.html
+++ b/SPOTIFY/index.html
@@ -20,6 +20,8 @@
 
 <body>
     <div class="main">
+
+        <!-- SIDE NAVBAR OF THE PROJECT -->
         <div class="sidebar">
             <div class="nav">
                 <div class="nav-option" style="opacity: 1;">
@@ -66,6 +68,8 @@
                 </div>
             </div>
         </div>
+        
+        <!-- THIS IS THE MAIN CONTENT OF THE WEBPAGE -->
         <div class="main-content">
             <div class="sticky-nav">
 
