--- a/Myntra PROJECT/index.html
+++ b/Myntra PROJECT/index.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../SPOTIFY/IMG/logo.png">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Myntra Clone</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-
 <body>
     <header>
         <div class="logo_container">
-            <a href="#"><img class="myntra_home" src="./IMG/myntra_logo.jpg" alt="myntra icon"></a>
+            <a href="#"><img class="myntra_home" src="./IMG/myntra_logo.jpg" alt="Myntra Home"></a>
         </div>
         <nav class="nav_bar">
-            <a href="#">Men</a>
-            <a href="#">Women</a>
-            <a href="#">Kids</a>
-            <a href="#">Home & Living</a>
-            <a href="#">Beauty</a>
-            <a href="#">Stdio <sup>New</sup></a>
+            <a href="#" id="a1">Men</a>
+            <a href="#" id="a2">Women</a>
+            <a href="#" id="a3">Kids</a>
+            <a href="#" id="a4">Home & Living</a>
+            <a href="#" id="a5">Beauty</a>
+            <a href="#" id="a6">Studio <sup>New</sup></a>
         </nav>
         <div class="search_bar">
-            <i class="fa-solid fa-magnifying-glass search_icon">
-            </i>
+            <span class="material-symbols-outlined search_icon">search</span>
             <input class="search_input" placeholder="Search for products, brands and more">
         </div>
-
         <div class="action_bar">
             <div class="action_container">
-               
-                <span class= "fa-light fa-user action_icon">person</span>
+                <span class="material-symbols-outlined action_icon">person</span>
                 <span class="action_name">Profile</span>
             </div>
 
+            <div class="action_container">
+                <span class="material-symbols-outlined action_icon">favorite</span>
+                <span class="action_name">Wishlist</span>
+            </div>
+
+            <div class="action_container">
+                <span class="material-symbols-outlined action_icon">shopping_bag</span>
+                <span class="action_name">Bag</span>
+            </div>
         </div>
     </header>
-    <main>Main
-        <div class="banner_containet">Banner</div>
-        <div class="category_heading">Category Heading</div>
-        <div class="category_items">Category Items</div>
+    <main>
+        <div class="banner_containet">
+            <img class="banner_img" src="./IMG/winter_banner.jpg" alt="Main Banner">
+        </div>
+        <div class="category_heading">Medal worthy Brands to Bag</div>
+        <div class="category_items">
+           <a href=""><img  class="seals_items" src="./IMG/Offers/1.png" alt=""></a> 
+           <a href=""><img  class="seals_items" src="./IMG/Offers/2.png" alt=""></a> 
+           <a href=""><img  class="seals_items" src="./IMG/Offers/3.png" alt=""></a> 
+           <a href=""><img  class="seals_items" src="./IMG/Offers/4.png" alt=""></a> 
+           <a href=""><img  class="seals_items" src="./IMG/Offers/5.png" alt=""></a> 
+           <a href=""><img  class="seals_items" src="./IMG/Offers/6.png" alt=""></a> 
+           <a href=""><img  class="seals_items" src="./IMG/Offers/7.png" alt=""></a> 
+           <a href=""><img  class="seals_items" src="./IMG/Offers/8.png" alt=""></a> 
+           <a href=""><img  class="seals_items" src="./IMG/Offers/9.png" alt=""></a> 
+           <a href=""><img  class="seals_items" src="./IMG/Offers/10.png" alt=""></a> 
+           <a href=""><img  class="seals_items" src="./IMG/Offers/11.png" alt=""></a> 
+           <a href=""><img  class="seals_items" src="./IMG/Offers/12.png" alt=""></a> 
+           
+        </div>
     </main>
     <footer>Footer</footer>
 </body>
